
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ test_vectors () ;

int
siphash24_selftest(void)
{
  if (test_vectors())
      return 0;
  else
      return 1;
}
